# sample-api

./: README.md  pyproject.toml
docs/: openapi.json
src/sample_api/: openapi.py
