[project]
name = "sample-api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kyle Pitzen", email = "kyle.pitzen@gmail.com" }]
dependencies = ["fastapi[standard]>=0.115.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample_api"]

[project.scripts]
generate-openapi = "sample_api.openapi:generate"
